--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -14,12 +14,13 @@
 }
 
 .hero-unit {
+    background: url("/assets/images/Rome.jpg") center center no-repeat;
+    background-size:100%;
     position: relative;
     padding: 30px 15px;
     color: #F5F5F5;
     text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
+    text-shadow: 1px 1px 1px #000000;
 }
 
 .footer {
