--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -15,9 +15,15 @@
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+        <li ng-class="{active: isActive('/')}">
+          <a ng-href="/">
+            <i class="glyphicon glyphicon-home"></i>
+            Home
+          </a>
         </li>
+        <!-- <li ng-repeat="item in menu" ng-class="{active: isActive('/')}">
+            <a ng-href="{{item.link}}">{{item.title}}</a>
+        </li> -->
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
