submit listing fixes, club details page

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -10,7 +10,7 @@
       <a href="/" class="navbar-brand"  style="color:#609fc7;font-weight:bold;">
         &nbsp;
         <i class="glyphicon glyphicon-globe" style="font-size:16px;"></i>
-        <i>LDS English Club</i>
+        <i>LDS English</i>
       </a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
