--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,19 +1,21 @@
-<footer class="footer" ng-controller="FooterCtrl" style="margin-top:0px;">
+<footer class="footer" ng-controller="FooterCtrl" style="margin-top:0px;background:#333;color:#c0c0c0;">
   <div class="container">
-    <div class="row" style="text-align:left;">
+    <div class="row" style="text-align:left;border-bottom:1px solid #777;padding-bottom:10px;margin-bottom:20px;">
       <div class="col-md-4">
-        <h5>
-          <i class="glyphicon glyphicon-link"></i>
-          Site Links
-        </h5>
-        <ul class="list-unstyled">
+        <h4 style="color:#f0f0f0;">
+          <strong>
+            <i class="glyphicon glyphicon-link"></i>
+            Site Links
+          </strong>
+        </h4>
+        <ul class="list-unstyled" style="padding-left:10px;">
           <li>
-            <a href="/submit_listing">
+            <a href="/submit_listing" style="color:#c0c0c0;" >
               Submit a Club
             </a>
           </li>
           <li>
-            <a href="/login">
+            <a href="/login" style="color:#c0c0c0;">
               Admin
             </a>
           </li>
@@ -21,10 +23,25 @@
       </div>
       <div class="col-md-4">
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" style="text-align:center;">
+        <h4 style="color:#f0f0f0;">
+          <strong>
+            <i class="fa fa-heart-o"></i>
+            Social
+          </strong>
+        </h4>
+        <p style="font-size:35px;">
+          <i class="fa fa-facebook-official"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-google-plus-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-youtube-square"></i>
+          <i class="fa fa-instagram"></i>
+        </p>
       </div>
     </div>
-    <hr>
+    
     <p>
       Copyright © 2015 <b>LDS English Club</b>. All Rights Reserved.
       This website is not owned by or affiliated with The Church of Jesus Christ of Latter-day Saints (sometimes called the Mormon or LDS Church). The views expressed herein do not necessarily represent the position of the Church. The views expressed by individual users are the responsibility of those users and do not necessarily represent the position of the Church. For the official Church websites, please visit LDS.org or Mormon.org.
