--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -17,7 +17,7 @@
     background: url("/assets/images/Rome.jpg") center center no-repeat;
     background-size: cover;
     position: relative;
-    padding: 14% 0%;
+    padding: 14% 0% 10% 0%;
     color: #F5F5F5;
     text-align: center;
     text-shadow: 1px 1px 0px #000,0px 0px 10px #000;
@@ -116,7 +116,7 @@
 }
 .top-clubs p {
     color:#777;
-    text-align:justify;
+    /*text-align:justify;*/
 }
 
 .footer {
