--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -48,7 +48,7 @@
     </div>
     
     <p>
-      Copyright © 2015 <b>LDS English Club</b>. All Rights Reserved.
+      Copyright © 2015 <b>LDS English</b>. All Rights Reserved.
       This website is not owned by or affiliated with The Church of Jesus Christ of Latter-day Saints (sometimes called the Mormon or LDS Church). The views expressed herein do not necessarily represent the position of the Church. The views expressed by individual users are the responsibility of those users and do not necessarily represent the position of the Church. For the official Church websites, please visit LDS.org or Mormon.org.
     </p>
 
