--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -24,7 +24,12 @@
         <!-- <li ng-repeat="item in menu" ng-class="{active: isActive('/')}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li> -->
-        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}">
+          <a href="/admin">
+            <i class="glyphicon glyphicon-user"></i>
+            Admin
+          </a>
+        </li>
       </ul>
       <form ng-if="!isActive('/')" class="navbar-form navbar-left" role="search">
         <div class="form-group">
