no results new tag

--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -36,13 +36,13 @@
           </strong>
         </h4>
         <p style="font-size:35px;">
-          <a href="https://www.facebook.com/LDS" style="color:#c0c0c0;"><i class="fa fa-facebook-official"></i></a>
-          <a href="https://twitter.com/ldschurch" style="color:#c0c0c0;"><i class="fa fa-twitter-square"></i></a>
-          <a href="https://plus.google.com/104070354126796687920/posts" style="color:#c0c0c0;"><i class="fa fa-google-plus-square"></i></a>
-          <a href="https://www.linkedin.com/company/the-church-of-jesus-christ-of-latter-day-saints--" style="color:#c0c0c0;"><i class="fa fa-linkedin-square"></i></a>
-          <a href="https://www.pinterest.com/ldschurch/" style="color:#c0c0c0;"><i class="fa fa-pinterest-square"></i></a>
-          <a href="https://www.youtube.com/user/MormonMessages" style="color:#c0c0c0;"><i class="fa fa-youtube-square"></i></a>
-          <a href="https://instagram.com/ldschurch/" style="color:#c0c0c0;"><i class="fa fa-instagram"></i></a>
+          <a href="https://www.facebook.com/LDS" target="_blank" style="color:#c0c0c0;"><i class="fa fa-facebook-official"></i></a>
+          <a href="https://twitter.com/ldschurch" target="_blank" style="color:#c0c0c0;"><i class="fa fa-twitter-square"></i></a>
+          <a href="https://plus.google.com/104070354126796687920/posts" target="_blank" style="color:#c0c0c0;"><i class="fa fa-google-plus-square"></i></a>
+          <a href="https://www.linkedin.com/company/the-church-of-jesus-christ-of-latter-day-saints--" target="_blank" style="color:#c0c0c0;"><i class="fa fa-linkedin-square"></i></a>
+          <a href="https://www.pinterest.com/ldschurch/" target="_blank" style="color:#c0c0c0;"><i class="fa fa-pinterest-square"></i></a>
+          <a href="https://www.youtube.com/user/MormonMessages" target="_blank" style="color:#c0c0c0;"><i class="fa fa-youtube-square"></i></a>
+          <a href="https://instagram.com/ldschurch/" target="_blank" style="color:#c0c0c0;"><i class="fa fa-instagram"></i></a>
         </p>
       </div>
     </div>
